--- a/CapstoneDesign_23_2/weekpage/weekpage.html
+++ b/CapstoneDesign_23_2/weekpage/weekpage.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>주간 학교 시간표</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="weekpage.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <style>
   table {
@@ -32,6 +32,8 @@
 </style>
 </head>
 <body>
+
+    <div id="live-clock" class="top-right-panel"></div>
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Twelfth navbar example">
         <div class="container-fluid">
@@ -62,6 +64,10 @@
           </div>
         </div>
       </nav>
+
+      <div class="content-container">
+
+        <div class="schedule-container">
 
 <h2>주간 시간표</h2>
 
@@ -131,12 +137,34 @@
     <td class="subject" data-day="friday1"></td>
   </tr>
 </table>
+<div class="button-container">
+    <button id="editModeButton">수정</button>
+    <div id="editInstructions" style="display: none;">수정할 항목을 고르세요</div>
+    <input type="text" id="editInput" style="display: none;">
+  </div>
+</div>
 
-<button id="editModeButton">수정</button>
-<div id="editInstructions" style="display: none;">수정할 항목을 고르세요</div>
-<input type="text" id="editInput" style="display: none;">
 
-<script src="script.js"></script>
+<div class="side-panel">
+    <div id="academic-calendar" class="panel">
+        <h3>학사 일정</h3>
+  <ul id="academic-list">
+    <li>중간고사: <span class="editable" contenteditable="true">12월 15일 - 12월 21일</span></li>
+    <li>휴일: <span class="editable" contenteditable="true">12월 25일</span></li>
+  </ul>
+  </div>
+        <div id="weekly-tasks" class="panel">
+            <h3>이번 주 업무</h3>
+            <textarea placeholder="업무를 입력하세요"></textarea>
+            <button>저장</button>
+          </div> 
+    </div>
+</div>
+
+
+
+<script src="live-clock.js"></script>
+<script src="weekpage.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
