--- a/CapstoneDesign_23_2/index/index.html
+++ b/CapstoneDesign_23_2/index/index.html
@@ -258,10 +258,13 @@
       
     </div>
   </div>
-  <div class="memo">
-    <textarea rows="4" cols="50"></textarea>
-  </div>
- </div>
+</div>
+<div>
+  
+</div>
+<div class="memo">
+  <textarea rows="4" cols="50"></textarea>
+</div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
@@ -274,7 +277,7 @@
       var container = document.getElementById('checklist-container');
       var newItem = document.createElement('div');
       newItem.classList.add('container');
-      newItem.innerHTML = '<input type="checkbox"> <input type="text" name="st_name"> <span class="delete-btn" onclick="deleteChecklistItem(this)">삭제하기</span>';
+      newItem.innerHTML = '<input type="checkbox"> <input type="text" name="st_name"> <span class="delete-btn" onclick="deleteChecklistItem(this)">삭제</span>';
       container.insertBefore(newItem, container.lastElementChild);
     }
   
