--- a/CapstoneDesign_23_2/index/index.html
+++ b/CapstoneDesign_23_2/index/index.html
@@ -57,8 +57,8 @@
   </nav>
   <div class="container">
     <div class="dailytimetable" style="display: inline-flex; flex-direction: row; justify-content: center;">
-    <div class="flex-item"">
-      daily timetable
+      <div class="flex-item"">
+        daily timetable
       <table>
         <tr>
           <th>time</th>
@@ -245,26 +245,21 @@
       </table>
     </div>
   <div class="checklist" style="display: inline-flex; flex-direction: row; justify-content: center;">
-      <div class="row" style="text-align: center;" id="checklist-container">
-        <p style="text-align: center;">
-          체크리스트
-        </p>
-        <div class="container">
-          <input type="checkbox"> <input type="text" name="st_name">
-          <span class="delete-btn" onclick="deleteChecklistItem(this)">삭제</span>
-        </div>
+    <div class="row" style="text-align: center;" id="checklist-container">
+      <p style="text-align: center;">체크리스트</p>
+      <div class="container">
+        <input type="checkbox"> <input type="text" name="st_name">
+        <span class="delete-btn" onclick="deleteChecklistItem(this)">삭제</span>
+      </div>
         <button onclick="addChecklistItem()">추가하기</button>
       </div>
-      
     </div>
   </div>
 </div>
-<div>
-  
-</div>
-<div class="memo">
+
+<!-- <div class="memo">
   <textarea rows="4" cols="50"></textarea>
-</div>
+</div> -->
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
