--- a/CapstoneDesign_23_2/weekpage/weekpage.html
+++ b/CapstoneDesign_23_2/weekpage/weekpage.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>주간 학교 시간표</title>
+<title>Edulog</title>
 <link rel="stylesheet" href="weekpage.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <style>
